<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiveInfo"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editNameTextView"
            android:layout_width="281dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/yourName"
            android:textColorHint="#828184"

            />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:text="@string/DONE" />

    </LinearLayout>

    <TextView
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e1dfdf"
        android:textColor="#2b2727"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#e1dfdf"
        android:textColor="#2b2727"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/setBirthDateButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/birthDate" />
    <TextView
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e1dfdf"
        android:textColor="#2b2727"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/setBirthTimeButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/birthTime"
        />

</LinearLayout>